Added second navbar, cleaner look

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        {% include 'includes/_navbar.html' %}
+        {% include 'includes/_navbar2.html' %}
 
         <div class="container">
             {% block body %}{% endblock %}
