Experimenting with forms

--- a/templates/includes/_navbar2.html
+++ b/templates/includes/_navbar2.html
@@ -20,10 +20,7 @@
             <form class="form-inline my-2 my-md-0">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/poems">Register</a>
+                        <a class="nav-link" href="/submit">Submit</a>
                     </li>
                 </ul>
             </form>
